trunk/Archive2/17/ee965639e4d467/output
main.cpp:7:8: error: no default argument for 'B'
 struct Dat{
        ^
